# Moe-Sekai-API

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  moe-sekai-configs.example.yaml
.github/workflows/: release.yml
src/: client.rs  config.rs  error.rs  main.rs
src/api/: apis.rs  image.rs  middleware.rs  routes.rs
src/client/: account.rs  helper.rs  sekai_client.rs  session.rs
src/crypto/: sekai_cryptor.rs
src/updater/: master.rs
