[package]
name = "moe-sekai-api"
version = "6.0.0"
edition = "2021"
authors = ["Haruki Dev Team"]
description = "Moe Sekai API - Rust Edition"
rust-version = "1.78"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3.32"
axum = { version = "0.8.8", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "gzip", "brotli", "query", "http2"] }
sonic-rs = "0.5.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = { package = "yaml_serde", version = "0.10.3" }
indexmap = { version = "2.13.0", features = ["serde"] }
rmp-serde = "1.3.1"
rmpv = "1.3.1"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
hex = "0.4.3"
base64 = "0.22.1"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
sea-orm = { version = "2.0.0-rc.35", features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }
tokio-cron-scheduler = "0.15.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.21.0", features = ["v4"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
parking_lot = "0.12.5"
regex = "1.12.3"
chrono = "0.4.44"
num_enum = "0.7.5"
notify = "8.2.0"
git2 = { version = "0.20.4", features = ["vendored-openssl"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
